--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^10.0.5",
+    "sharp": "^0.33.4",
     "tsconfig-paths": "^4.2.0",
     "zustand": "^4.5.4"
   },
